# yolov8-based-limb-recg

limb_recg/: CMakeLists.txt  package.xml
limb_recg/launch/: rs_cam_imu.launch
limb_recg/scripts/: limb_recg copy.py  limb_recg_node.py  rs_test.py  yolo_limb_recg_node.py
limb_recg/srv/: SuctionPose.srv
scripts/: PandaMassage.py  PandaMoveGroup.py  PandaMoveGroupDemo.py  body_exp.py  body_exp_robio.py  body_exp_support.py  body_phantom_exp.py  cali_motion.py  cart_traj_display.py  cartesian_control_exp.py  data_record.py  motion_demo.py  moveGroupInterface.py  moveGroupInterface_20230316_PEE.py  moveGroupInterface_PhyEE_position_with_pressure.py  moveGroupInterface_test.py  nptrs_phantom_suction.py  pressure_probe_control.py  record_cart_pose.py  record_cart_pose_lzh.py  record_strain_gauge.py  sg_body_exp_code.py  sg_exp_with_phantom.py  sg_rotation_test.py  sg_translation_exp_code.py  sg_translation_test.py  simple_kv_test copy.py  simple_kv_test.py  suction_exp_with_phantom.py
scripts/bkup/: PandaMassage_bkup_20230724.py  moveGroupInterface_20221214.py  moveGroupInterface_20221215.py  moveGroupInterface_20221215_twoPoints.py  moveGroupInterface_20221215_twoPoints_.py  moveGroupInterface_20221220_physiotherapyOnPhatom.py
